<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/fragment_form_new">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FirstName"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/FirstNameText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/FirstNameText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/LastNameText"
        android:layout_below="@+id/FirstNameText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LastName"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/LastNameText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/PhoneNumberText"
        android:layout_below="@+id/LastNameText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PhoneNumber"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/PhoneNumberText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/StreetText"
        android:layout_below="@+id/PhoneNumberText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Street"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/StreetText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/StreetNumber"
        android:id="@+id/textView5"
        android:layout_above="@+id/HouseNumberText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/HouseNumber"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/HouseNumberText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/City"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/CityText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/StreetNumberText"
        android:layout_below="@+id/StreetText"
        android:layout_alignStart="@+id/StreetText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/HouseNumberText"
        android:layout_below="@+id/StreetNumberText"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/CityText"
        android:layout_below="@+id/HouseNumberText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PostCode"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/PostCodeText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/PostCodeText"
        android:layout_below="@+id/CityText"
        android:layout_alignStart="@+id/CityText" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/SaveBTN"
        android:id="@+id/button"
        android:onClick="OnSaveBtn_clicked"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:layout_toStartOf="@+id/PostCodeText" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/CleanBTN"
        android:id="@+id/button2"
        android:onClick="OnCleanDb_clicked"
        android:layout_below="@+id/button"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/CleanForm"
        android:id="@+id/button3"
        android:onClick="OnCleanForm_clicked"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button" />


</RelativeLayout>
